# PolygonMeshProcessExamples

./: CMakeLists.txt  README.md  formatcode.sh
cmake/: ConfigureOpenCV.cmake  ConfigureOpengl.cmake  ConfigureTaucs.cmake  MyConfigure.cmake
data/Shaders/: TransformVertexShader.vert
include/glfw-3.1.2/examples/: boing.c  gears.c  heightmap.c  particles.c  simple.c  splitview.c  wave.c
include/glfw-3.1.2/include/GLFW/: glfw3.h
include/glfw-3.1.2/src/: cocoa_platform.h  context.c  egl_context.c  egl_context.h  glx_context.c  init.c  input.c  internal.h  linux_joystick.c  mach_time.c  mir_init.c  mir_monitor.c  mir_platform.h  mir_window.c  monitor.c  posix_time.c  wgl_context.c  wgl_context.h  win32_init.c  win32_monitor.c  win32_platform.h  win32_time.c  win32_tls.c  win32_window.c  window.c  winmm_joystick.c  wl_init.c  wl_monitor.c  wl_platform.h  wl_window.c  x11_init.c  x11_monitor.c  x11_platform.h  x11_window.c  xkb_unicode.c
include/glfw-3.1.2/tests/: clipboard.c  cursor.c  empty.c  events.c  gamma.c  glfwinfo.c  iconify.c  joysticks.c  monitors.c  msaa.c  reopen.c  sharing.c  tearing.c  threads.c  title.c  windows.c
include/pangolin-ui/: Parse.h  Shaders.h  Uniform.h  myGUI.h  myRender.h
include/polygon_mesh_processor/: CurvatureViewer.h  FairingViewer.hh  GlutExaminer.hh  MeshViewer.hh  SmoothingViewer.h  TaucsSolver.hh  gl.hh
include/taucs/: TaucsSolver.cpp  taucs.h  taucs_config_build.h  taucs_private.h
include/taucs-linux/: taucs.h  taucs_config_build.h  taucs_private.h
main/: CMakeLists.txt  Main.cpp  curvview.cpp  fairing.cpp  mview.cpp  smoother.cpp
src/: CMakeLists.txt
src/c/: CMakeLists.txt
src/c/taucs/src/: blas_aux.c  taucs_ccs_base.c  taucs_ccs_factor_llt.c  taucs_ccs_generators.c  taucs_ccs_io.c  taucs_ccs_ooc_llt.c  taucs_ccs_ooc_lu.c  taucs_ccs_ops.c  taucs_ccs_order.c  taucs_ccs_solve_llt.c  taucs_ccs_xxt.c  taucs_complex.c  taucs_gremban.c  taucs_iter.c  taucs_linsolve.c  taucs_logging.c  taucs_malloc.c  taucs_memory.c  taucs_ooc_io.c  taucs_recvaidya.c  taucs_sn_llt.c  taucs_superlu.c  taucs_timer.c  taucs_vaidya.c  taucs_vec_base.c
src/cpp/: CMakeLists.txt
src/cpp/gl_ui_shader/: myRender.cpp
src/cpp/polygon-mesh-processor/: CurvatureViewer.cpp  FairingViewer.cpp  GlutExaminer.cpp  SmoothingViewer.cpp  TaucsSolver.cpp
src/gl_ui_shader/: Parse.cpp
src/polygon-mesh-processor/: GlutViewer.cpp  MeshViewer.cpp
